--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </a>
         <a href="javascript:void(0);" onclick="showDescription('allen-bradley')" class="button-link">
             <div class="main_buttons">
-                <img class="main_buttons_img" src="IMAGES\EXTRACT_Here\Blue Abstract Circle Global Tech Logo\AB1.png" alt="ALLEN BRADLEY">
+                <img class="main_buttons_img" src="IMAGES\EXTRACT_HERE\Blue Abstract Circle Global Tech Logo\AB1.png" alt="ALLEN BRADLEY">
                 <div class="image_title">ALLEN BRADLEY</div>
             </div>
         </a>
